--- a/Client/src/components/Card.css
+++ b/Client/src/components/Card.css
@@ -82,14 +82,6 @@
   background: #cac8c5;
 }
 
-.second_button {
+.button {
   margin-top: 2px;
-}
-
-.third_button {
-  margin-top: 2px;
-}
-
-.forth_button {
-  margin-top: 2px;
-}
+}}
