--- a/Client/src/components/Card.css
+++ b/Client/src/components/Card.css
@@ -21,7 +21,7 @@
   padding: 15px 15px;
   background-color: #ffffff;
   margin: 50px 0;
-  height: 500px;
+  height: 200px;
   box-shadow: 0 4px 5px rgb(0, 0, 0);
   text-align: left;
 }
@@ -61,11 +61,12 @@
 }
 
 .info {
-  margin: 20px 20px;
+  margin: 20px 0;
   color: #1a7e76;
 }
 
 .login-form__button {
+  margin-top: 2px;
   padding: 15px;
   color: #ffffff;
   font-weight: bold;
