--- a/Client/src/components/Pages/ForgotPassword.css
+++ b/Client/src/components/Pages/ForgotPassword.css
@@ -1,3 +1,23 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+}
+
+.login-container {
+  padding: 70px;
+  background: #ffffff;
+}
+
+.login-form__header {
+  margin-bottom: 15px;
+  text-align: center;
+  color: #333333;
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+}
+
 .login-form__input {
   width: 100%;
   margin-bottom: 10px;
@@ -15,4 +35,54 @@
 
 .login-form__input::placeholder {
   color: #aaaaaa;
+}
+.login-form__button {
+  padding: 15px;
+  color: #ffffff;
+  font-weight: bold;
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.login-form__button:active {
+  background: #cac8c5;
+}
+
+.cancel__button {
+  margin-top: 2px;
+  padding: 15px;
+  color: #ffffff;
+  font-weight: bold;
+  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.cancel__button:active {
+  background: #cac8c5;
+}
+
+.modifyP_photo_container {
+  margin: 20px auto;
+  padding: 25px;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 0 4px 5px rgb(0, 0, 0);
+}
+
+.circle_img {
+  border-radius: 50%;
+  border: 7px solid #364547;
+  width: 120px;
+  height: 120px;
+}
+
+.login-form__photo {
+  margin: 20px;
 }
