--- a/Client/src/components/Pages/ForgotPassword.css
+++ b/Client/src/components/Pages/ForgotPassword.css
@@ -86,3 +86,14 @@
 .login-form__photo {
   margin: 20px;
 }
+.login-form__bio {
+  width: 100%;
+  height: 80px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid #dddddd;
+  background: #ffffff;
+  outline: none;
+  transition: border-color 0.5s;
+}
