--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -5,40 +5,6 @@
   font-family: "PT Sans", sans-serif;
 }
 
-.home,
-.laboratoires,
-.equipes,
-.se-connecter {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-}
-
-.equipes {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.laboratoires {
-  background-position: center;
-  background-size: auto;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 20px;
-}
-
-.se-connecter {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
 /*__________________*/
 .App {
   width: 100vw;
@@ -54,10 +20,11 @@
 }
 
 .post {
-  margin: 50px auto;
+  float: left;
+  margin: 50px 35px;
   padding: 25px;
-  width: 800px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -73,7 +40,7 @@
   background-color: #2d362e;
   display: grid;
   place-content: center;
-  color:sienna;
+  color: rgb(255, 255, 255);
 }
 
 .post .post-body {
@@ -131,15 +98,34 @@
   outline: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 570px;
+  margin-left: 680px;
+  margin-bottom: 40px;
 }
 
+.login-form,
+.login-form * {
+  box-sizing: border-box;
+  font-family: "Source Sans Pro";
+}
 
+.login-form {
+  max-width: 350px;
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+}
+.login-container {
+  padding: 70px;
+  background: #ffffff;
+}
+/*-----------------------------------*/
 .labo {
-  margin: 50px auto;
+  float: left;
+  margin: 50px 35px;
   padding: 25px;
-  width: 800px;
-  height: 300px;
+  width: 600px;
+  height: 500px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -155,17 +141,102 @@
 }
 
 .labo .labo-name {
-  font-size: larger;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: large;
   text-align: left;
-  color: rgb(36, 133, 133);
+  color: rgb(255, 255, 255);
   display: inline-block;
-  margin-right: 550px;
+  place-content: center;
   text-decoration: none;
 }
 
 .labo .labo-responsable {
+  margin-top: 10px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: inline-block;
   text-decoration: none;
-  color: dodgerblue;
+  color: rgb(0, 0, 0);
 }
+.labo .labo-title {
+  flex: 20%;
+  border-bottom: 1px solid lightgray;
+  border-radius: 10px;
+  background-color: #2d362e;
+  display: grid;
+  place-content: center;
+  color: rgb(255, 255, 255);
+}
+
+.labo .labo-author {
+  padding: 5px;
+  border: 1px solid rgb(39, 12, 12);
+  font-weight: bold;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+/*-------------- labo-by-id ----------------*/
+
+.labo-by-id {
+  margin: 50px auto;
+  padding: 25px;
+  width: 600px;
+  height: 500px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(39, 12, 12);
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.labo-by-id .labo-body {
+  flex: 60%;
+  display: grid;
+  place-content: center;
+  margin-top: 20px;
+}
+
+.labo-by-id .labo-name {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: large;
+  text-align: left;
+  color: rgb(255, 255, 255);
+  display: inline-block;
+  place-content: center;
+  text-decoration: none;
+}
+
+.labo-by-id .labo-responsable {
+  margin-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  display: inline-block;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+.labo-by-id .labo-title {
+  flex: 20%;
+  border-bottom: 1px solid lightgray;
+  border-radius: 10px;
+  background-color: #2d362e;
+  display: grid;
+  place-content: center;
+  color: rgb(255, 255, 255);
+}
+
+.labo-by-id .labo-author {
+  padding: 5px;
+  border: 1px solid rgb(39, 12, 12);
+  font-weight: bold;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/*-------------------------*/
